@@ -1,3 +1,10 @@
+Wed Jul 30 18:31:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountEditor.cpp:
+	* src/QGaimAccountEditor.h:
+	  - Changing the protocol on the account editor's protocol drop-down
+	    list now updates the whole account editor.
+
 Tue Jul 29 01:39:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
